resources/variants/astelia/build_error.log
>make astelia:build
compiling src/modules/pio.c
compiling src/modules/debug_uart.c
compiling src/modules/KeyMatrixScanner2.c
compiling src/modules/usbiocore.c
compiling src/modules/configuratorServant.c
compiling src/modules/xf_eeprom.c
compiling src/modules/generalUtils.c
compiling src/modules/ConfigurationMemoryReader.c
compiling src/modules/keyboardCoreLogic2_Dual.c
Makefile:96: recipe for target 'build/obj/src/modules/keyboardCoreLogic2_Dual.o' failed
Makefile:145: recipe for target 'astelia:build' failed
src/modules/keyboardCoreLogic2_Dual.c:7:2: error: #error corelogic option CORELOGIC_KEYSLOTS_NUM is not provided.
 #error corelogic option CORELOGIC_KEYSLOTS_NUM is not provided.
  ^
src/modules/keyboardCoreLogic2_Dual.c:496:24: error: ‘CORELOGIC_KEYSLOTS_NUM’ undeclared here (not in a function)
 #define NumKeySlotsMax CORELOGIC_KEYSLOTS_NUM
                        ^
src/modules/keyboardCoreLogic2_Dual.c:506:38: note: in expansion of macro ‘NumKeySlotsMax’
   uint16_t keyAttachedOperationWords[NumKeySlotsMax];
                                      ^
make[1]: *** [build/obj/src/modules/keyboardCoreLogic2_Dual.o] Error 1
make: *** [astelia:build] Error 2
